# support-agent

./: .dockerignore  .env.example  .env.staging.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
admin/: index.html
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_invoices.py  003_feedback.py  004_tenant_id.py
app/: admin_auth.py  admin_routes.py  async_admin.py  async_database.py  async_gdpr.py  async_queries.py  async_session_store.py  auth.py  cache.py  cached_db.py  checkpointer.py  config.py  database.py  eval_intent.py  executor.py  gdpr.py  gdpr_routes.py  health.py  langfuse_eval.py  main.py  metrics.py  observability.py  privacy.py  rate_limit.py  schemas.py  security.py  service.py  session_cache.py  session_store.py  sse.py  tenant.py  ws_chat.py
app/graph/: builder.py  nodes.py  state.py  supervisor.py
app/integrations/: zendesk.py
app/prompts/: __init__.py  intent.yaml
app/rag/: __init__.py  embeddings.py  index.py  loader.py  retriever.py  vectors.py
app/tools/: __init__.py  registry.py
docs/: LANGFUSE.md  OPERATOR.md  PILOT.md  PLUGIN_SDK.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TESTING.md  TLS.md
knowledge/: faq.md  support_hours.md  warranty.md
plugins/: __init__.py  example_promo.py
scripts/: dev.ps1  load_test.py  smoke_test.py  verify.ps1
tests/: conftest.py
tests/eval/: golden_dataset.jsonl  run_ab_eval.py  run_eval.py  (+3 more)
widget/: chat.js  index.html  styles.css
(+25 files in other folders)
