[project]
name = "support-agent"
version = "0.1.0"
description = "FastAPI + LangGraph support agent"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"app/schemas.py" = ["UP045"]
"app/graph/state.py" = ["UP045"]
"tests/eval/run_eval.py" = ["E402"]
